# SmartBeddingRPI

./: .gitignore  AccelerationAdquisition.py  AudioRecorder.py  ClockWorker.py  Controller.py  EnvironmentAdquisition.py  LoggerManager.py  MQTTManager.py  Model.py  PositionModel.py  PressureAdquisition.py  commandos.txt  matrix.c  plotter.py  reg_1.json
Ambiente/: prueba.py
Bluetooth/: hola.c  pruba.py
Led/: led.py
Movimiento/: Funcionamiento.webm  PruebaSensores.ipynb  plotInicial.py  port.py
PositionModel/: 31249_RF_max_20trees.joblib  info_31249_RF_max_20trees.txt
PositionModel/General/: 12869_RF_70trees_depth10.joblib  info_12869_RF_70trees_depth10.txt
Presión/: SensorSabana.ipynb  main.py  matrix_driver.c  muestreoEnPython.py  plotter_sinMatplot.py  validate.py
Presión/old/: Controlador.py  PressureSensor.py  libhola.c  ploteo.py  plotterC.py  sampler.c  sensor.c  test_hola.py
Presión/pantallazos/: Comportamiento.webm
SmartBeddingApp/: README.md
SmartBeddingApp/src/: config.txt  (+1 more)
SmartBeddingRust/: Cargo.toml  Cross.toml
SmartBeddingRust/src/: acceleration.rs  api.rs  audio (Copiar).rs  audio.rs  bluetooth.rs  config.rs  environment.rs  main.rs  pressure.rs  storage.rs
SmartBeddingRustv2/: Cargo.toml
SmartBeddingRustv2/src/: interfaces.rs  main.rs  utils.rs
SmartBeddingRustv2/src/bridge/: mod.rs
SmartBeddingRustv2/src/capture/: acceleration.rs  audio.rs  environment.rs  mod.rs  pressure.rs
SmartBeddingRustv2/src/mqtt/: mod.rs
SmartBeddingRustv2/src/storage/: audio.rs  files.rs  mod.rs
Sonido/: pruebaDispositivos.py  pruebaSonido.py
(+35 files in other folders)
