[package]
name = "SmartBeddingRust"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
bluer = { version = "0.16", features = ["full"] }
rppal = "0.22.1"
tokio = { version = "1.49.0", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
cpal = "0.15"       # Captura de audio
hound = "3.5"      # Escritura de archivos .wav
anyhow = "1.0"     # Manejo de errores simplificado
# Para los cálculos de CPU/RAM (sustituye a psutil)
sysinfo = "0.30"
# Para operaciones de vectores y filtros
ndarray = "0.15"

# Para web
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }