[package]
name = "SmartBeddingSystem"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
rppal = "0.22.1"
sysinfo = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cpal = "0.15"   
hound = "3.5"
paho-mqtt = { version = "0.12", default-features = false, features = ["bundled"] }
